--- a/DungeonExplorer.csproj
+++ b/DungeonExplorer.csproj
@@ -44,6 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="InventoryManager.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="ItemStack.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
