--- a/DungeonExplorer.csproj
+++ b/DungeonExplorer.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Game.cs" />
     <Compile Include="InventoryManager.cs" />
+    <Compile Include="InventorySlot.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemStack.cs" />
     <Compile Include="Player.cs" />
