--- a/DungeonExplorer.csproj
+++ b/DungeonExplorer.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Creatures.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="InventoryManager.cs" />
     <Compile Include="InventorySlot.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="RoomManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
