Item system and PlayerManager
The player can now pickup items and place them in either their pockets or rucksack. PlayerManager handles player behaviour such as item pickup.

--- a/DungeonExplorer.csproj
+++ b/DungeonExplorer.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Creatures.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="InventoryManager.cs" />
+    <Compile Include="PlayerManager.cs" />
     <Compile Include="InventorySlot.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemStack.cs" />
